--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
             <br>
             <button class="btn" type="submit">Login</button>
         </form>
+
+    </div>
+    <div>
+        <p>Password : 1234</p>
     </div>
 </body>
 </html>
